# TG-admin

./: .gitignore  ANALYSIS_REPORT.md  Cargo.toml  Containerfile  LICENSE  README.md  TECHNICAL_DEBT_REPORT.md  compose.yaml  config.example.toml
.github/workflows/: ci.yml
ML-serer/: README.md
benches/: parsing.rs
bundled_templates/moderation/: access_denied.txt  ban.txt  ban_success.txt  bot_not_admin.txt  generic_error.txt  mute.txt  undo_success.txt  warn.txt
bundled_templates/ui/: help.txt
docs/: CLEAN_CODE_REFACTOR_PLAN.md  DEPLOY.md  DEPLOY_RUNBOOK.md  IMPLEMENTATION_SUMMARY.md  ML_SERVER_CONTRACT.md  MVP_ROADMAP.md  MVP_STATUS.md  PLUGIN_AUTHORING_GUIDE.md  REPUTATION_SERVICE_CONTRACT.md  ROUTING_DIFF.md  RUNTIME_CONTRACT.md  STABILIZATION_ROADMAP_AND_AGENT_PROMPTS.md
scripts/lib/: utils.rhai
scripts/moderation/: notifier.rhai  transcribe_and_fix.rhai
src/: app.rs  audit.rs  config.rs  event.rs  host_api.rs  ingress.rs  lib.rs  main.rs  moderation.rs  observability.rs  router.rs  runtime.rs  scheduler.rs  script.rs  shutdown.rs  storage.rs  tg.rs  unit.rs
src/event/: tests.rs
src/host_api/: audit.rs  contract.rs  ctx.rs  db.rs  error.rs  history.rs  ml.rs  template.rs  test_support.rs  tests.rs  tests_audit.rs  tests_capabilities.rs  tests_ctx.rs  tests_db.rs  tests_history.rs  tests_surface.rs  tests_template.rs  tests_unit_status.rs  unit_status.rs  validation.rs
src/ingress/: json_export.rs  mod.rs  tests.rs
src/moderation/: audit.rs  commands.rs  events.rs  helpers.rs  mod.rs  reactions.rs  tests.rs  types.rs  undo.rs
src/parser/: command.rs  dispatch.rs  duration.rs  mod.rs  reason.rs  target.rs
src/reputation/: mod.rs
src/router/: classify.rs  dispatch.rs  mod.rs  tests.rs  types.rs
src/storage/: config.rs  connection.rs  error.rs  helpers.rs  mod.rs  schema.rs  tests.rs  types.rs
src/tg/: init.rs  mod.rs  predict.rs  tests.rs  transport.rs  types.rs  validation.rs
src/unit/: manifest.rs  mod.rs  registry.rs  tests.rs  types.rs  validation.rs
templates/: welcome.txt
tests/: json_perf_test.rs  snapshots_test.rs
tests/integration/: moderation_flow.rs  unit_validation.rs
tests/snapshots/: command__warn.json
units/: voice_processor.unit.toml
